updated build.gradle
Signed-off-by: Joshua Palis <jpalis@amazon.com>