@@ -1,117 +1,43 @@
-import org.opensearch.gradle.info.BuildParams
-import java.util.concurrent.Callable
-
-buildscript {
-    ext {
-        opensearch_version = "2.0.0-SNAPSHOT"
-    }
-
-    repositories {
-        mavenLocal()
-        maven { url "https://aws.oss.sonatype.org/content/repositories/snapshots" }
-        mavenCentral()
-        maven { url "https://plugins.gradle.org/m2/" }
-    }
-
-    dependencies {
-        classpath "org.opensearch.gradle:build-tools:${opensearch_version}"
-    }
-}
-
 plugins {
-    id 'nebula.ospackage' version "8.3.0"
-    id 'java-library'
-    id "io.freefair.lombok" version "5.0.0-rc4"
-    id 'jacoco'
-    id "com.diffplug.spotless" version "6.3.0" apply false
     id 'java'
-    id 'idea'
-    id 'application'
-}
-
-version '2.0.0-SNAPSHOT'
-
-repositories {
-    mavenLocal()
-    maven { url "https://aws.oss.sonatype.org/content/repositories/snapshots" }
-    mavenCentral()
-    maven { url "https://plugins.gradle.org/m2/" }
 }
 
 ext {
-    isSnapshot = "true" == System.getProperty("build.snapshot", "true")
+    projectSubstitutions = [:]
     licenseFile = rootProject.file('LICENSE.txt')
     noticeFile = rootProject.file('NOTICE.txt')
 }
 
-allprojects {
-    version = opensearch_version - "-SNAPSHOT" + ".0"
-    if (isSnapshot) {
-        version += "-SNAPSHOT"
-    }
-
-    plugins.withId('java') {
-        sourceCompatibility = targetCompatibility = "1.8"
-    }
-}
-
+apply plugin: "application"
+version '1.0-SNAPSHOT'
 mainClassName = 'org.opensearch.latencytester.transportservice.RunPlugin'
 
+repositories {
+        maven { url "https://aws.oss.sonatype.org/content/repositories/snapshots" }
+        mavenCentral()
+}
+
 dependencies {
+    implementation "org.opensearch:opensearch:2.0.0-SNAPSHOT"
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.1'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.1'
-    api "org.opensearch:opensearch:${opensearch_version}"
-    api "org.opensearch.plugin:opensearch-scripting-painless-spi:2.0.0-SNAPSHOT"
-    api group: 'com.google.guava', name: 'failureaccess', version:'1.0.1'
-    api group: 'com.google.guava', name: 'guava', version:'30.0-jre'
-    api group: 'commons-lang', name: 'commons-lang', version: '2.6'
-    api "io.netty:netty-all:4.1.73.Final"
-    testImplementation "org.opensearch.test:framework:${opensearch_version}"
-    api group: 'io.netty', name: 'netty-all', version: '4.1.73.Final'
-    api "io.netty:netty-buffer:4.1.73.Final"
-    api "io.netty:netty-codec:4.1.73.Final"
-    api "io.netty:netty-codec-http:4.1.73.Final"
-    api "io.netty:netty-common:4.1.73.Final"
-    api "io.netty:netty-handler:4.1.73.Final"
-    api "io.netty:netty-resolver:4.1.73.Final"
-    api "io.netty:netty-transport:4.1.73.Final"
-    api "com.amazonaws:aws-java-sdk-s3:1.11.749"
-    api "com.amazonaws:aws-java-sdk-core:1.11.749"
-    api "com.amazonaws:jmespath-java:1.11.749"
-    api "org.apache.httpcomponents:httpclient:4.5.13"
-    api "org.apache.httpcomponents:httpcore:4.4.12"
-    api "commons-logging:commons-logging:1.1.3"
-    api "org.apache.logging.log4j:log4j-1.2-api:2.17.1"
-    api "commons-codec:commons-codec:1.13"
-    api "com.fasterxml.jackson.core:jackson-core: 2.12.6"
-    api "com.fasterxml.jackson.core:jackson-databind: 2.12.6"
-    api "com.fasterxml.jackson.core:jackson-annotations: 2.12.6"
-    api "com.fasterxml.jackson.dataformat:jackson-dataformat-cbor: 2.12.6"
-    api "joda-time:joda-time:2.10.12"
-    compile group: 'com.google.guava', name: 'failureaccess', version:'1.0.1'
-    compile group: 'com.google.guava', name: 'guava', version:'30.0-jre'
-
-    // HACK: javax.xml.bind was removed from default modules in java 9, so we pull the api in here,
-    // and whitelist this hack in JarHell
-    api 'javax.xml.bind:jaxb-api:2.2.2'
-}
-
-compileJava.options.warnings = false
-compileJava {
-    options.compilerArgs.addAll(["-processor", 'lombok.launch.AnnotationProcessorHider$AnnotationProcessor'])
-    doFirst {
-        // TODO: do not fail build on warnings, need to fix all compiler warnings
-        options.compilerArgs.remove('-Werror')
-        // TODO: need to fix all java doc format
-        options.compilerArgs.remove('-Xdoclint:all')
+    implementation "io.netty:netty-all:4.1.73.Final"
+    testCompileOnly ("junit:junit:4.13.2") {
+        exclude module : 'hamcrest'
+        exclude module : 'hamcrest-core'
     }
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+    testImplementation "org.opensearch.test:framework:2.0.0-SNAPSHOT"
+    implementation 'javax.xml.bind:jaxb-api:2.2.2'
 }
-// TODO: Similarly, need to fix compiling errors in test source code
-compileTestJava.options.warnings = false
-compileTestJava {
-    options.compilerArgs.addAll(["-processor", 'lombok.launch.AnnotationProcessorHider$AnnotationProcessor'])
-    doFirst {
-        options.compilerArgs.remove('-Werror')
-        options.compilerArgs.remove('-Xdoclint:all')
+
+test {
+    useJUnitPlatform()
+    jvmArgs '--enable-preview'
+    systemProperty 'tests.security.manager', 'false'
+    testLogging.showStandardStreams = true
+    testLogging {
+        events "passed", "skipped", "failed", "standardOut", "standardError"
     }
 }
